# big-data-project

./: .gitignore  README.md  app.py  constants.py  create_final_data.py  preprocess_data.py  pyproject.toml
data/final/: after_crisis.csv  monthly_change.csv  mv_avg.csv  mv_avg_20.csv  return_rate.csv
notebooks/: AAPL.csv  AMZN.csv  Big_data_project.ipynb  META.csv  MSFT.csv  Untitled.ipynb  ZM.csv
src/transformation/: spark_basic.py
